update index.js and input.js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <h3>awesome books</h3>
             <ul>
-                <li><a href="#" id="Lists" value="Reload Page" onClick="window.location.reload(true)">Lists</a></li>
+                <li><a href="#" id="Lists">Lists</a></li>
                 <li><a href="#" id="AddBooks">Add new</a> </li>
                 <li><a href="#" id="contactuss" >Contact</a></li>
             </ul>
